Inlined schemas within parameters should default to Any. Until support for inlined schemas in query parameters is added, Any should be used instead of generating an incorrect type.

--- a/src/test/resources/examples/queryParameters/api.yaml
+++ b/src/test/resources/examples/queryParameters/api.yaml
@@ -10,6 +10,15 @@ paths:
         required: true
         schema:
           type: string
+      - name: inline_enum.
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+            - active
+            - inactive
+            - archived
     get:
       parameters:
         - in: query
