--- a/src/test/resources/examples/enumExamples/api.yaml
+++ b/src/test/resources/examples/enumExamples/api.yaml
@@ -33,6 +33,8 @@ components:
           $ref: '#/components/schemas/ExtensibleEnumObject'
         list_enums:
           $ref: '#/components/schemas/ListEnums'
+        nullable_ref:
+          $ref: '#/components/schemas/NullableEnum'
 
     EnumObject:
       type: string
@@ -85,5 +87,7 @@ components:
           bar_prop:
             type: string
 
-
-
+    NullableEnum:
+      type: string
+      nullable: true
+      enum: [ "foo", "bar", null ]
