Kotlin serialization: Use String for byte and binary

--- a/src/test/resources/examples/primitiveTypes/api.yaml
+++ b/src/test/resources/examples/primitiveTypes/api.yaml
@@ -38,3 +38,9 @@ components:
         numberDouble:
           type: number
           format: double
+        byte:
+          type: string
+          format: byte
+        binary:
+          type: string
+          format: binary
