--- a/src/test/resources/examples/arrays/api.yaml
+++ b/src/test/resources/examples/arrays/api.yaml
@@ -46,6 +46,12 @@ components:
       items:
         $ref: "#/components/schemas/Something"
 
+    ArrayOfUniqueSomething:
+      type: array
+      uniqueItems: true
+      items:
+        $ref: "#/components/schemas/Something"
+
     Something:
       type: object
       required:
@@ -87,6 +93,18 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/ArrayRef"
+
+    ContainsUniqueArrayRef:
+      type: object
+      required:
+        - weight_on_mars
+      properties:
+        weight_on_mars:
+          type: array
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/ArrayRef"
+
     ArrayRef:
       type: object
       required:
