--- a/src/test/resources/examples/mapExamples/api.yaml
+++ b/src/test/resources/examples/mapExamples/api.yaml
@@ -62,6 +62,8 @@ components:
                 type: string
               other_number:
                 type: integer
+        contains_polymorphic_map_reference:
+          $ref: '#/components/schemas/ContainsReferenceToPolymorphicMap'
       additionalProperties:
         type: object
         minProperties: 1
@@ -185,3 +187,21 @@ components:
           type: string
       additionalProperties:
         type: boolean
+
+    ContainsReferenceToPolymorphicMap:
+      type: object
+      additionalProperties: false
+      properties:
+        attributes:
+          $ref: "#/components/schemas/PolymorphicMapDefinition"
+      required:
+        - attributes
+
+    PolymorphicMapDefinition:
+      additionalProperties:
+        oneOf:
+          - type: string
+            maxLength: 512
+          - type: number
+          - type: boolean
+      nullable: true
