Fix issue with inlined oneOf generation under arrays. One dealing with arrays, we must also check that the items schema is inlined before generating a class for it.

--- a/src/test/resources/examples/discriminatedOneOf/api.yaml
+++ b/src/test/resources/examples/discriminatedOneOf/api.yaml
@@ -10,6 +10,10 @@ components:
       properties:
         state:
           $ref: '#/components/schemas/State'
+        arrayOfStates:
+          type: array
+          items:
+            $ref: '#/components/schemas/State'
         inlinedArray:
           type: array
           items:
