Fix issue where mappings are not being defaulted correctly for oneOf. Fix issue where mappings are not being defaulted correctly for oneOf.
Commit failing test

--- a/src/test/resources/examples/discriminatedOneOf/api.yaml
+++ b/src/test/resources/examples/discriminatedOneOf/api.yaml
@@ -35,6 +35,13 @@ components:
           oneOf:
             - "$ref": "#/components/schemas/OneObject"
             - "$ref": "#/components/schemas/TwoObject"
+        inlinedObjectNoMappings:
+          type: object
+          discriminator:
+            propertyName: type
+          oneOf:
+            - "$ref": "#/components/schemas/OneObject"
+            - "$ref": "#/components/schemas/TwoObject"
     State:
       oneOf:
         - $ref: '#/components/schemas/StateA'
