Add file disclaimer to controller files

--- a/src/test/resources/examples/fileComment/api.yaml
+++ b/src/test/resources/examples/fileComment/api.yaml
@@ -1,5 +1,22 @@
 openapi: 3.0.0
 paths:
+  /pets:
+    get:
+      summary: List all pets
+      operationId: listPets
+      tags:
+        - pets
+      responses:
+        '200':
+          description: A paged array of pets
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        '400':
+          description: Invalid status value
 components:
   schemas:
     Pet:
