Support long enum values
Uses %S format specifier instead of plain CodeBlock.

https://square.github.io/kotlinpoet/s-for-strings/

--- a/src/test/resources/examples/enumExamples/api.yaml
+++ b/src/test/resources/examples/enumExamples/api.yaml
@@ -45,6 +45,7 @@ components:
         - 4
         - -5
         - _6
+        - really long enum value goes here and it is very descriptive
 
     ExtensibleEnumObject:
       type: string
