--- a/src/test/resources/examples/requiredReadOnly/api.yaml
+++ b/src/test/resources/examples/requiredReadOnly/api.yaml
@@ -6,10 +6,15 @@ components:
       required:
         - user_name
         - created
+        - created_by
       properties:
         user_name:
           type: string
         created:
           type: string
           format: date-time
+          readOnly: true
+        created_by:
+          type: string
+          nullable: true
           readOnly: true
