--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Finalise upload so it appears in Central Portal
         run: |
           curl -X POST \
+            -H "Accept: application/json" \
             -u "${{ secrets.OSSRH_USER_TOKEN_USERNAME }}:${{ secrets.OSSRH_USER_TOKEN_PASSWORD }}" \
             "https://central.sonatype.com/api/v1/publisher/manual/upload/defaultRepository/com/cjbooms"
 
