--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,21 @@ jobs:
         env:
           OSSRH_USER_TOKEN_USERNAME: ${{ secrets.OSSRH_USER_TOKEN_USERNAME }}
           OSSRH_USER_TOKEN_PASSWORD: ${{ secrets.OSSRH_USER_TOKEN_PASSWORD }}
-      - name: Finalise upload so it appears in Central Portal
+      - name: Notify Central of Upload (Manual Staging Promotion)
         run: |
-          curl -X POST \
-            -H "Accept: application/json" \
+          echo "Querying for open staging repository..."
+          RESPONSE=$(curl -s -u "${{ secrets.OSSRH_USER_TOKEN_USERNAME }}:${{ secrets.OSSRH_USER_TOKEN_PASSWORD }}" \
+            "https://ossrh-staging-api.central.sonatype.com/manual/search/repositories?ip=any&profile_id=com.cjbooms")
+          
+          REPO_KEY=$(echo "$RESPONSE" | jq -r '.repositories[0].key')
+
+          if [[ "$REPO_KEY" == "null" ]]; then
+            echo "No open repository found"
+            exit 1
+          fi
+
+          echo "Notifying Sonatype to register repository in Central Publisher Portal..."
+          curl -X POST -H "Accept: application/json" \
             -u "${{ secrets.OSSRH_USER_TOKEN_USERNAME }}:${{ secrets.OSSRH_USER_TOKEN_PASSWORD }}" \
-            "https://central.sonatype.com/api/v1/publisher/manual/upload/defaultRepository/com/cjbooms"
+            "https://ossrh-staging-api.central.sonatype.com/manual/upload/repository/$REPO_KEY"
 
