fix: default value for floating numbers

--- a/end2end-tests/models-jackson/openapi/api.yaml
+++ b/end2end-tests/models-jackson/openapi/api.yaml
@@ -431,3 +431,23 @@ components:
         properties:
           bar_prop:
             type: string
+
+    FloatWithDefaultValue:
+      type: object
+      properties:
+        float_with_default_integer:
+          type: number
+          format: float
+          default: 0
+        double_with_default_integer:
+          type: number
+          format: double
+          default: 0
+        float_with_default_float:
+          type: number
+          format: float
+          default: 0.1
+        double_with_default_float:
+          type: number
+          format: double
+          default: 0.1
