Fix Missing marker interface for oneOf.
When making use of both oneOf and allOf, with sealed interfaces for oneOf, the marker interface for the oneOf was not getting generated

--- a/src/test/resources/examples/polymorphicModels/api.yaml
+++ b/src/test/resources/examples/polymorphicModels/api.yaml
@@ -1,6 +1,13 @@
 openapi: 3.0.0
 components:
   schemas:
+    PolymorphicType:
+      discriminator:
+        propertyName: generation
+      oneOf:
+        - $ref: "#/components/schemas/PolymorphicTypeOne"
+        - $ref: "#/components/schemas/polymorphic_type_two"
+
     PolymorphicTypeOneRef:
       $ref: "#/components/schemas/PolymorphicTypeOne"
     PolymorphicTypeOneAnotherRef:
