Add @Contextual annotations to array elements for KOTLINX_SERIALIZATION
Types like UUID, URI, BigDecimal, ByteArray, Instant, and LocalDateTime
require @Contextual annotation with kotlinx.serialization. Previously,
these annotations were only added to singular properties, not array
elements, causing serialization issues at runtime.

Now generates: List<@Contextual UUID> instead of: List<UUID>

--- a/end2end-tests/models-kotlinx/openapi/api.yaml
+++ b/end2end-tests/models-kotlinx/openapi/api.yaml
@@ -53,6 +53,11 @@ components:
         imageUrl:
           type: string
           format: uri
+        aListOfUuids:
+          type: array
+          items:
+            type: string
+            format: uuid
     Pets:
       type: array
       maxItems: 100
