--- a/src/test/resources/examples/okHttpClient/api.yaml
+++ b/src/test/resources/examples/okHttpClient/api.yaml
@@ -11,6 +11,7 @@ paths:
         - $ref: "#/components/parameters/QueryParam2"
         - $ref: "#/components/parameters/ListQueryParamInt"
         - $ref: "#/components/parameters/JsonEncodedHeaderParam"
+        - $ref: "#/components/parameters/EnumQueryParam"
       responses:
         200:
           description: "successful operation"
@@ -231,6 +232,16 @@ components:
               headerProp2: anotherValue
               nestedProp:
                 nestedProp1: nestedValue
+    EnumQueryParam:
+        name: enum_query_param
+        in: query
+        schema:
+            type: string
+            enum:
+            - "enum_value_1"
+            - "enum_value_2"
+            - "enum_value_3"
+        required: false
 
   headers:
     Location:
